extends CharacterBody2D

@onready var health_component = $HealthComponent
@onready var animated_sprite_2d = $AnimatedSprite2D
@onready var movement_component = $MovementComponent

@export var death_scene: PackedScene
@export var shadow: Sprite2D
@export var sprite: CompressedTexture2D

var flash_shader: ShaderMaterial = null

func _ready():
	# ‚è≥ –ñ–¥—ë–º 1 –∫–∞–¥—Ä, —á—Ç–æ–±—ã —É–∑–ª—ã —É—Å–ø–µ–ª–∏ –∏–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä–æ–≤–∞—Ç—å—Å—è
	
	await get_tree().process_frame

	# üì° –ü–æ–¥–∫–ª—é—á–∞–µ–º —Å–∏–≥–Ω–∞–ª —Å–º–µ—Ä—Ç–∏
	health_component.died.connect(on_died)

	# ‚ö° –ù–∞–¥—ë–∂–Ω–æ –∑–∞–≥—Ä—É–∂–∞–µ–º FlashComponent –∏ flash_shader
	var flash_component := $FlashComponent
	while not flash_component or not flash_component.flash_material:
		await get_tree().process_frame
		flash_component = $FlashComponent

	flash_shader = flash_component.flash_material as ShaderMaterial

	

func _process(delta):
	move_shadow()

	var direction = movement_component.get_direction()
	movement_component.move_to_player(self)

	if direction.x != 0 or direction.y != 0:
		animated_sprite_2d.play("run")
	else:
		animated_sprite_2d.play("idle")

	var face_sign = sign(direction.x)
	if face_sign != 0:
		animated_sprite_2d.scale.x = face_sign


func on_died():
	var back_layer = get_tree().get_first_node_in_group("back_layer")
	var death_instance = death_scene.instantiate() as DeathComp

	if death_instance != null:
		back_layer.add_child(death_instance)

		# üåÄ –ó–∞–¥–∞—ë–º —Ç–µ–∫—Å—Ç—É—Ä—É –¥–ª—è —ç—Ñ—Ñ–µ–∫—Ç–∞ —Å–º–µ—Ä—Ç–∏ (—á–∞—Å—Ç–∏—Ü—ã)
		if death_instance.particles_2d != null:
			death_instance.particles_2d.texture = sprite

		# ‚öôÔ∏è –ü–æ–¥–≥–æ–Ω—è–µ–º –≤–µ—Ä—Ç–∏–∫–∞–ª—å–Ω–æ–µ —Å–º–µ—â–µ–Ω–∏–µ —Å–ø—Ä–∞–π—Ç–∞
		if death_instance.sprite_offset != null:
			death_instance.sprite_offset.position.y = animated_sprite_2d.offset.y

		# üìç –£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –ø–æ–∑–∏—Ü–∏—é –ø–æ—è–≤–ª–µ–Ω–∏—è
		death_instance.global_position = global_position
	else:
		print("–û—à–∏–±–∫–∞: death_instance = null")

	# ‚ùå –£–¥–∞–ª—è–µ–º –≤—Ä–∞–≥–∞
	queue_free()



func move_shadow():
	if shadow != null:
		shadow.position = Vector2(0, 0)
